created the 'footer'

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
     </div>
 
     <div id="shopping-placeholder" class="item-list-container"></div>
+
+    <div class="footer">
+        <div class="item-count row"> 5 items left </div>
+        <div class="statuses-filter row">
+            <div>All</div>
+            <div>Active</div>
+            <div>Complete</div>
+        </div>
+        <div class="clear-button row">
+            <div>Clear Completed</div>
+        </div>
+    </div>
+
 </div>
     <!-- button should go first cuz javascript needs to have all the html elements loaded before it executes the code inside javascript-->
     <script src="app.js"></script>
