2 of the 'footer' buttons are coded

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div id="shopping-placeholder" class="item-list-container"></div>
 
     <div class="footer">
-        <div class="item-count row"> 5 items left </div>
+        <div class="item-count row" id="item-count"></div>
         <div class="statuses-filter row">
             <div>All</div>
             <div>Active</div>
             <div>Complete</div>
         </div>
         <div class="clear-button row">
-            <div>Clear Completed</div>
+            <div onclick="clearCompleted();">Clear Completed</div>
         </div>
     </div>
 
