--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="footer">
         <div class="item-count row" id="item-count"></div>
         <div class="statuses-filter row">
-            <div>All</div>
-            <div>Active</div>
-            <div>Complete</div>
+            <div onclick="displayItemsFromArray('all');">All</div>
+            <div onclick="displayItemsFromArray('active');">Active</div>
+            <div onclick="displayItemsFromArray('complete');">Complete</div>
         </div>
         <div class="clear-button row">
             <div onclick="clearCompleted();">Clear Completed</div>
