added media queries

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
     <div class="row">
-    <input type="text" class="input-text" id="item-input"/>
+    <input type="text" class="input-text" id="item-input" placeholder="Write here..."/>
     <div onclick="addItemToArray();" class="add-btn">Add</div>
     <img src="restart.png" class="custom-icon" onclick="refresh();">
     </div>
